--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="container text-center">
             <p class="section-subtitle">Have a look at resume</p>
             <h6 class="section-title mb-6">My Resume</h6>
-            <iframe src="https://drive.google.com/file/d/1XLjV6iTCjgslaYhIPDzfCqtUdAAj8mfD/view?usp=drive_link" height="1000rem" width="90%" frameborder="0"></iframe>
+            <iframe src="https://drive.google.com/file/d/1XLjV6iTCjgslaYhIPDzfCqtUdAAj8mfD/view?usp=sharing" height="1000rem" width="90%" frameborder="0"></iframe>
         </div>
     </section>
     <!-- end of myresume section -->
