--- a/index.html
+++ b/index.html
@@ -205,58 +205,58 @@
                             <a href="https://linkedin.com/in/dilkushsingh/" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <i class="fab fa-linkedin fa-lg"></i>
-                                <br><strong>LinkedIn</strong>
+                                <br><p class="logotxt">LinkedIn</p>
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://github.com/dilkushsingh" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <i class="fab fa-github fa-lg"></i>
-                                <br><strong>GitHub</strong>
+                                <br><p class="logotxt">GitHub</p>
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://medium.com/@dilkushsingh" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <i class="fab fa-medium-m fa-lg"></i>
-                                <br><strong>Medium</strong>
+                                <br><p class="logotxt">Medium</p>
                             </a>
                         </div>
                         <div class="col">
                             <a href="mailto:work.dilkushsingh@gmail.com" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <i class="fas fa-envelope fa-lg"></i>
-                                <br><strong>Email</strong>
+                                <br><p class="logotxt">Email</p>
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://www.hackerrank.com/profile/dilkushsingh" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <i class="fab fa-hackerrank fa-lg"></i>
-                                <br><strong>HackerRank</strong>
+                                <br><p class="logotxt">HackerRank</p>
                             </a>
                         </div>
-                        <div class="col">
+<!--                         <div class="col">
                             <a href="https://leetcode.com/dilkushsingh/" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <img class="fab brand-logo fa-lg" src="assets/imgs/leetcode_logo.ico"></img>
-                                <br><strong>Leetcode</strong>
+                                <br><p class="logotxt">Leetcode</p>
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://www.geeksforgeeks.org/user/dilkushsingh/" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <img class="fab brand-logo fa-lg" src="assets/imgs/geeksforgeeks_logo.ico"></img>
-                                <br><strong>GeeksForGeeks</strong>
+                                <br><p class="logotxt">GeeksForGeeks</p>
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://instagram.com/kr_dilkhushsinghrajput" target="_blank"
                                 class="text-decoration-none text-dark">
                                 <i class="fab fa-instagram fa-lg"></i>
-                                <br><strong>Instagram</strong>
+                                <br><p class="logotxt">Instagram</p>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </footer>
