--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                         <textarea name="comment" id="comment" rows="6" class="form-control section-subtitle"
                             placeholder="Please Write Something"></textarea>
                     </div>
-<!--                     <div class="h-captcha" data-captcha="true"></div> -->
-                    <div class="g-recaptcha" data-sitekey="6Lcl5b0pAAAAAMP77RI7u7RCHXGOEKSurwZSLHqr"></div>
+                    <div class="h-captcha" data-captcha="true"></div>
+                    <input type="hidden" name="subject" value="New Submission from Portfolio Website">
                     <div class="form-group col-sm-12 mt-3">
                         <input type="submit" value="Send Message" class="btn btn-outline-primary rounded">
                     </div>
